Remove deprecated method calls